<?xml version="1.0"?>
<package format="2">
  <name>mardan_msgs</name>
  <version>0.0.0</version>
  <description>The mardan_msgs package</description>

  <maintainer email="juanda0718@gmail.com">Juan David Adarve Bermudez</maintainer>


  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/mardan_msgs</url> -->



  <author email="juanda0718@gmail.com">Juan David Adarve Bermudez</author>



  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
